tests/machine/x/php/closure.error
PHP Fatal error:  Uncaught Error: Call to undefined function add10() in /workspace/mochi/tests/machine/x/php/closure.php:6
Stack trace:
#0 {main}
  thrown in /workspace/mochi/tests/machine/x/php/closure.php on line 6
